--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": [
      "work_cell"
@@ -72,7 +72,32 @@
     "\n",
     "def sum_of_ints(i0, i1):\n",
     "  # TODO: fill in this function\n",
-    "  return 0\n"
+    "  if i0 < i1:\n",
+    "    all_ints = range(i0, i1 + 1)\n",
+    "    return sum(all_ints)\n",
+    "  else:\n",
+    "    all_ints = range(i1, i0 + 1)\n",
+    "    return sum(all_ints)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "522"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_of_ints(4, 32)"
    ]
   },
   {
@@ -88,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 01\n",
     "Tests.test(\"01\", sum_of_ints)"
@@ -848,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   },
   "vscode": {
    "interpreter": {
