up to exercise 3b functional

--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -6378,7 +6378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6406,7 +6406,9 @@
       "\n",
       "population of smallest city is\n",
       "50011\n",
-      "\n"
+      "\n",
+      "city with largest population is\n",
+      "Shanghai\n"
      ]
     }
    ],
@@ -6455,18 +6457,23 @@
     "print(\"population of largest city is\")\n",
     "print(largest_population)\n",
     "print()\n",
-    "#answer is -17.88333 \n",
+    "#answer is 22315474\n",
     "\n",
     "print(\"population of smallest city is\")\n",
     "print(smallest_population)\n",
     "print()\n",
-    "#answer is 30.7\n",
+    "#answer is 500117\n",
     "\n",
     "\n",
     "\n",
     "# What's the name of the city with the largest population?\n",
-    "\n",
-    "largest_city_name = \"\""
+    "def popKey(P):\n",
+    "    return P[\"pop\"]\n",
+    "largestcitykey = max(info_cities, key=popKey)\n",
+    "largest_city_name = largestcitykey[\"name\"]\n",
+    "print(\"city with largest population is\")\n",
+    "print(largest_city_name)\n",
+    "#answer is Shanghai"
    ]
   },
   {
@@ -6478,9 +6485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03A: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03A\n",
     "answers = [num_cities, first_city, last_latitude, last_longitude, largest_population, smallest_population, largest_city_name]\n",
@@ -6503,24 +6518,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Shanghai', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.22222, 'lon': 121.45806, 'pop': 22315474}\n"
+     ]
+    }
+   ],
    "source": [
     "# Work on 03B here\n",
     "\n",
-    "largest_city = {}\n"
+    "largest_city = largestcitykey\n",
+    "print(largest_city)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03B: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03B\n",
     "Tests.test(\"03B\", largest_city)"
