--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -6577,7 +6577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6590,14 +6590,27 @@
     "# Implement the helper function for calculating distances between 2 cities\n",
     "\n",
     "def distance(cityA, cityB):\n",
-    "  return 0\n"
+    "  difLat = cityA[\"lat\"] - cityB[\"lat\"]\n",
+    "  difLon = cityA[\"lon\"] - cityB[\"lon\"]\n",
+    "  difLatsq = pow(difLat, 2)\n",
+    "  difLonsq = pow(difLon, 2)\n",
+    "  x = pow((difLatsq + difLonsq), .5)\n",
+    "  return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03C: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03C\n",
     "Tests.test(\"03C\", distance)"
@@ -6646,7 +6659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6660,14 +6673,33 @@
     "# add that info to each city's entry or save that on a new list\n",
     "# with their name and pop\n",
     "\n",
-    "city_distances = []\n"
+    "city_distances = []\n",
+    "\n",
+    "for obj in info_cities:\n",
+    "   x = {\n",
+    "      \"name\": obj[\"name\"],\n",
+    "      \"pop\": obj[\"pop\"],\n",
+    "      \"distance\": distance(largest_city, obj)\n",
+    "   }\n",
+    "   city_distances.append(x)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03D: All tests passed 🎉🎉🎉\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 03D\n",
     "Tests.test(\"03D\", city_distances)\n",
@@ -6703,21 +6735,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[98], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdistanceKey\u001b[39m(P):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m P[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdistance\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 8\u001b[0m cities_by_distance \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcity_distances\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdistanceKey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#closest_3 = {}\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Work on 03E here\n",
     "\n",
     "# Sort the array and get the name and population of the 3 cities closest to the largest city\n",
     "\n",
-    "cities_by_distance = []\n",
+    "def distanceKey(P):\n",
+    "    return P[\"distance\"]\n",
     "\n",
-    "closest_3 = {}\n"
+    "cities_by_distance = sorted(city_distances, key=distanceKey)\n",
+    "\n",
+    "\n",
+    "#closest_3 = {}\n"
    ]
   },
   {
