all exercises functional!!

--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "work_cell"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "522"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "work_cell"
@@ -182,64 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# USED FOR TESTING\n",
-    "def sum_objects(in_list):\n",
-    "  # TODO: fill this in\n",
-    "  for obj in in_list:\n",
-    "    print(obj)\n",
-    "    print(type(obj))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 'cost', 'amount': 10.0}"
+       "367.78"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# USED FOR TESTING\n",
-    "test_list = [\n",
-    "  { \"type\": \"cost\", \"amount\": 10.00 },\n",
-    "  { \"type\": \"cost\", \"amount\": 15.99 },\n",
-    "  { \"type\": \"income\", \"amount\": 150.25 },\n",
-    "  { \"type\": \"income\", \"amount\": 243.52 },\n",
-    "]\n",
-    "\n",
-    "test_list[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'type': 'cost', 'amount': 10.0}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 15.99}\n",
-      "<class 'dict'>\n",
-      "{'type': 'income', 'amount': 150.25}\n",
-      "<class 'dict'>\n",
-      "{'type': 'income', 'amount': 243.52}\n",
-      "<class 'dict'>\n"
-     ]
     }
    ],
    "source": [
@@ -268,45 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'type': 'cost', 'amount': 92.82}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 33.76}\n",
-      "<class 'dict'>\n",
-      "{'type': 'income', 'amount': 55.95}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 19.16}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 3.3}\n",
-      "<class 'dict'>\n",
-      "{'type': 'income', 'amount': 96.63}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 59.26}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 93.48}\n",
-      "<class 'dict'>\n",
-      "{'type': 'cost', 'amount': 17.65}\n",
-      "<class 'dict'>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a real number, not 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[163], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Test 02\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mTests\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m02\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msum_objects\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32mHW03_utils.py:279\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(test_label, test_arg)\u001b[0m\n",
-      "File \u001b[0;32mHW03_utils.py:65\u001b[0m, in \u001b[0;36mtest_02\u001b[0;34m(func)\u001b[0m\n",
-      "File \u001b[0;32mHW03_utils.py:4\u001b[0m, in \u001b[0;36mfeq\u001b[0;34m(a, b, ep)\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'NoneType'"
+      "02: All tests passed 🎉🎉🎉\n"
      ]
     }
    ],
@@ -360,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -6402,7 +6325,7 @@
        " ...]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6413,7 +6336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6520,7 +6443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -6553,7 +6476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6577,7 +6500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -6612,7 +6535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 23,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6635,7 +6558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -6694,7 +6617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 25,
    "metadata": {
     "tags": [
      "work_cell"
@@ -6724,7 +6647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -7862,25 +7785,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 39,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[172], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdistanceKey\u001b[39m(P):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m P[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdistance\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 8\u001b[0m cities_by_distance \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcity_distances\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdistanceKey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#closest_3 = cities_by_distance[1:4]\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Work on 03E here\n",
     "\n",
@@ -7891,19 +7802,25 @@
     "\n",
     "cities_by_distance = sorted(city_distances, key=distanceKey)\n",
     "\n",
-    "#closest_3 = cities_by_distance[1:4]\n"
+    "sortedcities = cities_by_distance[1:4]\n",
+    "closest_3 = {\n",
+    "    cities_by_distance[1][\"name\"]: cities_by_distance[1][\"pop\"],\n",
+    "    cities_by_distance[2][\"name\"]: cities_by_distance[2][\"pop\"],\n",
+    "    cities_by_distance[3][\"name\"]: cities_by_distance[3][\"pop\"],\n",
+    "}\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR Check answer object. There should be exactly 3 key/value pairs in it.\n"
+      "03E: All tests passed 🎉🎉🎉\n"
      ]
     }
    ],
@@ -7951,7 +7868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 41,
    "metadata": {
     "id": "S2bnMyEoWmxL",
     "tags": []
@@ -7985,7 +7902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 42,
    "metadata": {
     "tags": [
      "work_cell"
@@ -8066,7 +7983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -8106,7 +8023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 44,
    "metadata": {
     "tags": [
      "work_cell"
@@ -8124,7 +8041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -8155,7 +8072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "work_cell"
